Link to the Google CSS docs.

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -6,8 +6,8 @@
 
 	<title>Svelte app</title>
 
+  <!-- See https://developers.google.com/gsuite/add-ons/guides/css-->
   <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
-  <!-- The CSS package above applies Google styling to buttons and other elements. -->
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 
