Add Google's CSS to the dev version of the sidebar for consistent styling.

--- a/sidebar/public/index.html
+++ b/sidebar/public/index.html
@@ -7,6 +7,9 @@
 
 	<title>Markua Docs Add-on</title>
 
+  <!-- See https://developers.google.com/gsuite/add-ons/guides/css-->
+  <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
+
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
